[gd_scene load_steps=5 format=2]

[ext_resource path="res://extended_gamejolt.gd" type="Script" id=1]
[ext_resource path="res://TheEnd.gd" type="Script" id=2]
[ext_resource path="res://sprite/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://font/default.tres" type="DynamicFont" id=4]

[node name="TheEnd" type="Node2D"]
script = ExtResource( 2 )

[node name="GameJoltAPI" type="HTTPRequest" parent="."]
script = ExtResource( 1 )
private_key = "0b16467d0adbc53060162275c53ed7cd"
game_id = "482868"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Highscore" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Highscore"]
anchor_right = 1.0
margin_bottom = 46.0
theme = ExtResource( 3 )
text = "High Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Highscore"]
anchor_right = 1.0
margin_top = 100.0
margin_bottom = 100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anchor" type="Control" parent="CanvasLayer/Highscore/VBoxContainer"]
margin_right = 974.0

[node name="anchor2" type="Control" parent="CanvasLayer/Highscore/VBoxContainer"]
margin_top = 4.0
margin_right = 974.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Highscore/VBoxContainer"]
margin_top = 28.0
margin_right = 974.0
margin_bottom = 74.0
custom_constants/separation = 400
alignment = 1

[node name="Button4" type="Button" parent="CanvasLayer/Highscore/VBoxContainer/HBoxContainer"]
margin_left = 198.0
margin_right = 261.0
margin_bottom = 46.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="CanvasLayer/Highscore/VBoxContainer/HBoxContainer"]
margin_left = 661.0
margin_right = 776.0
margin_bottom = 46.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreInput" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HighscoreInput"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Congratulations"
align = 1

[node name="Score" type="Label" parent="CanvasLayer/HighscoreInput"]
anchor_right = 1.0
margin_top = 100.0
margin_bottom = 46.0
text = "Score: 0"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HighscoreInput"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -78.0
margin_bottom = 78.0
custom_constants/separation = 47
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/HighscoreInput/VBoxContainer"]
margin_right = 974.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="CanvasLayer/HighscoreInput/VBoxContainer/CenterContainer"]
margin_left = 187.0
margin_right = 787.0
margin_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
align = 1
placeholder_text = "Enter name    "

[node name="Button" type="Button" parent="CanvasLayer/HighscoreInput/VBoxContainer"]
margin_left = 433.0
margin_top = 103.0
margin_right = 540.0
margin_bottom = 149.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CanvasLayer/HighscoreInput/VBoxContainer"]
margin_left = 429.0
margin_top = 196.0
margin_right = 544.0
margin_bottom = 242.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer/HighscoreInput/VBoxContainer"]
margin_left = 455.0
margin_top = 289.0
margin_right = 518.0
margin_bottom = 335.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="api_fetch_rank" from="GameJoltAPI" to="." method="api_fetch_rank"]
[connection signal="api_scores_added" from="GameJoltAPI" to="." method="api_scores_added"]
[connection signal="api_scores_fetched" from="GameJoltAPI" to="." method="api_scores_fetched"]
[connection signal="api_session_opened" from="GameJoltAPI" to="." method="api_session_opened"]
[connection signal="pressed" from="CanvasLayer/Highscore/VBoxContainer/HBoxContainer/Button4" to="." method="exit"]
[connection signal="pressed" from="CanvasLayer/Highscore/VBoxContainer/HBoxContainer/Button5" to="." method="restart"]
[connection signal="pressed" from="CanvasLayer/HighscoreInput/VBoxContainer/Button" to="." method="submit_name"]
[connection signal="pressed" from="CanvasLayer/HighscoreInput/VBoxContainer/Button3" to="." method="restart"]
[connection signal="pressed" from="CanvasLayer/HighscoreInput/VBoxContainer/Button2" to="." method="exit"]
